--- a/family_acc/transactions/templates/account_list.html
+++ b/family_acc/transactions/templates/account_list.html
@@ -1,16 +1,17 @@
 {% extends "layout.html" %}
+{% load i18n %}
 
 {% block title %}
-    Accounts
+    {% trans "Accounts" %}
 {% endblock %}
 
 {% block content %}
 <div>
-   <h1>Accounts of {{request.user.username}}'s family</h1>    
+   <h1>{% trans "Accounts" %}</h1>    
    
     <form method="get">
     <label>
-      Currency:
+      {% trans "Currency" %}:
       <select name="currency">
         <option value="">All</option>
         {% for c in currencies %}
@@ -22,14 +23,14 @@
       </select>
     </label>
     <input type="hidden" name="sort" value="{{ current_sort }}">
-    <button type="submit">Filter</button>
+    <button type="submit">{% trans "Filter" %}</button>
   </form>
 
     <table>
         <tr>
-            <th><a href="?sort=name">Account</a></th>
-            <th><a href="?sort=balance">Balance</a></th>
-            <th><a href="?sort=currency__code">Currency</a></th>
+            <th><a href="?sort=name">{% trans "Account" %}</a></th>
+            <th><a href="?sort=balance">{% trans "Balance" %}</a></th>
+            <th><a href="?sort=currency__code">{% trans "Currency" %}</a></th>
         </tr>
         {% for item in data%}
             <tr>
