--- a/family_acc/members/templates/all_members.html
+++ b/family_acc/members/templates/all_members.html
@@ -1,18 +1,19 @@
 {% extends "layout.html" %}
+{% load i18n %}
 
 {% block title %}
-    Members
+    {% trans "Family members" %}
 {% endblock %}
 
 {% block content %}
 <div>
-    <h1>Members of my family</h1>
+    <h1>{% trans "Family members" %}</h1>
     <table>
         <tr>
-            <th> Username </th>
-            <th> First Name </th>
-            <th> Last Name </th>
-            <th> email </th>
+            <th> {% trans "Username" %} </th>
+            <th> {% trans "First Name" %} </th>
+            <th> {% trans "Last Name" %} </th>
+            <th> {% trans "email" %} </th>
         </tr>
         {% for item in mymembers%}
             <tr>
