--- a/family_acc/transactions/templates/category_list.html
+++ b/family_acc/transactions/templates/category_list.html
@@ -1,17 +1,18 @@
 {% extends "layout.html" %}
+{% load i18n %}
 
 {% block title %}
-    List of used categories
+    {% trans "Categories of income/expenses" %}
 {% endblock %}
 
 {% block content %}
 <div>
-   <h1>Categories of income/expenses of {{request.user.username}}'s family </h1>    
+   <h1>{% trans "Categories of income/expenses" %}</h1>    
     <table>
         <tr>
-            <th> Name </th>
-            <th> Used for income? </th>
-            <th> Used for expense? </th>
+            <th> {% trans "Name" %} </th>
+            <th> {% trans "Use for income?" %} </th>
+            <th> {% trans "Use for expense?" %} </th>
         </tr>
         {% for item in data%}
             <tr>
