--- a/family_acc/transactions/templates/category_upload.html
+++ b/family_acc/transactions/templates/category_upload.html
@@ -1,20 +1,20 @@
 {% extends "layout.html" %}
-
+{% trans "Example of data in csv file for upload" %}
 {% block title %}
-    Category upload
+    {% trans "Category upload" %}
 {% endblock %}
 
 {% block content %}
 <div>
-   <h1>Category upload</h1>    
+   <h1>{% trans "Category upload" %}</h1>    
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.file }}
-        <button type="submit">Upload CSV</button>
+        <button type="submit">{% trans "Upload CSV" %}</button>
     </form>
     </br>
     <div>
-        <h3> Example of data in csv file for upload: </h3>
+        <h3>{% trans "Example of data in csv file for upload" %}: </h3>
         <i>name, income_flag, expense_flag </br>
         Salary,1,0</br>
         Food,0,1</br>
