--- a/family_acc/transactions/templates/currency_create.html
+++ b/family_acc/transactions/templates/currency_create.html
@@ -1,20 +1,22 @@
 {% extends "layout.html" %}
+{% load i18n %}
+
 
 {% block title %}
-    Currency create
+    {% trans "Create currency" %}
 {% endblock %}
 
 {% block content %}
-    <h1> Create new currency record </h1>
-    <a href="/transactions/category_upload">or upload by csv</a>
+    <h1> {% trans "Create currency" %}</h1>
+    <a href="/transactions/category_upload">{% trans "or upload by csv" %}</a>
 
     <section>
         <form class="form-with-validation" action="{% url 'transactions:currency_create' %}" method="post" >
             {% csrf_token %}
-            <div>Currency code: {{ form.code }}</div>
-            <div>Currency description: {{ form.description }}</div>
+            <div>{% trans "Currency code" %}: {{ form.code }}</div>
+            <div>{% trans "Currency description" %}: {{ form.description }}</div>
 
-            <button class="form-submit">Save</button>
+            <button class="form-submit">{% trans "Save" %}</button>
         </form>        
     </section>
 
