--- a/family_acc/transactions/templates/transaction_create_income.html
+++ b/family_acc/transactions/templates/transaction_create_income.html
@@ -1,23 +1,24 @@
 {% extends "layout.html" %}
+{% load i18n %}
 
 {% block title %}
-    Income
+    {% trans "Create income" %}
 {% endblock %}
 
 {% block content %}
-    <h1> Add new income </h1>
-    <a href="/transactions/transaction_upload">or upload by csv</a>
+    <h1> {% trans "Create income" %} </h1>
+    <a href="/transactions/transaction_upload">{% trans "or upload by csv" %}</a>
     <section>
         <form class="form-with-validation" action="{% url 'transactions:transaction_create_income' %}" method="post" >
             {% csrf_token %}
-            <div>{{ form.date.label_tag }} {{ form.date }} </div>
-            <div>{{ form.account.label_tag }} {{ form.account }} <a href="{% url 'transactions:account_create' %}">add account</a></div>
-            <div>{{ form.amount.label_tag }}   {{ form.amount }} <span id="currency-info"></span></div>
+            <div>{% trans "Date" %} {{ form.date }} </div>
+            <div>{% trans "Account" %} {{ form.account }} <a href="{% url 'transactions:account_create' %}">{% trans "add account" %}</a></div>
+            <div>{% trans "Amount" %}   {{ form.amount }} <span id="currency-info"></span></div>
             {{ form.amount.errors }}
 
-            <div>{{ form.category.label_tag }} {{ form.category }} <a href="{% url 'transactions:category_create' %}">add category</a></div>
-            <div>{{ form.remark.label_tag }}   {{ form.remark }}</div>
-            <button class="form-submit">Save</button>
+            <div>{% trans "Category" %} {{ form.category }} <a href="{% url 'transactions:category_create' %}">{% trans "add category" %}</a></div>
+            <div>{% trans "Remark" %}  {{ form.remark }}</div>
+            <button class="form-submit">{% trans "Save" %}</button>
         </form>        
     </section>
 
