--- a/family_acc/transactions/templates/transaction_upload.html
+++ b/family_acc/transactions/templates/transaction_upload.html
@@ -17,7 +17,7 @@
     <div>
         <h3>{% trans "Example of data in csv file for upload" %}: </h3>
         <i>
-            date,account,amount,currency_code,category_name,remark</br>
+            date,account_name,amount,currency_code,category_name,remark</br>
             2026-01-01,Card,10000,EUR,Salary,Salary for January 2026</br>
             2026-01-01,Card,-5.12,EUR,Food,Some Coffe</br>
             </br>
