--- a/family_acc/transactions/templates/transaction_create_expense.html
+++ b/family_acc/transactions/templates/transaction_create_expense.html
@@ -9,9 +9,10 @@
     <h1> {% trans "Create expense" %} </h1>
     <a href="/transactions/transaction_upload">{% trans "or upload by csv" %}</a>
     <section>
-        <form class="form-with-validation" action="{% url 'transactions:transaction_create_expense' %}" method="post" >
+        <form class="form-with-validation" action="{% url 'transactions:transaction_create' transaction_type='expense'%}" method="post" >
             {% csrf_token %}
             <div>{% trans "Date" %} {{ form.date }} </div>
+            <div>{% trans "Currency" %} {{ form.currency }}</div>
             <div>{% trans "Account" %} {{ form.account }} <a href="{% url 'transactions:account_create' %}">{% trans "add account" %}</a></div>
             <div>{% trans "Amount" %}   {{ form.amount }} <span id="currency-info"></span></div>
             {{ form.amount.errors }}
